--- a/src/index.html
+++ b/src/index.html
@@ -4,12 +4,19 @@
 		<meta charset="UTF-8" />
 		<link rel="icon" type="image/svg+xml" href="vite.svg" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
-		<link rel="stylesheet" href="/style.css" />
+		<link
+			rel="preload"
+			href="/fonts/Inter-VariableFont_slnt,wght.woff2"
+			as="font"
+			type="font/woff2"
+			crossorigin="anonymous"
+		/>
 		<title>Vite App</title>
+		<link rel="stylesheet" href="/style.css" />
 	</head>
 	<body>
 		<main>
-			<h1>Hello world!</h1>
+			<h1 class="text-5xl font-thin">Hello world!</h1>
 		</main>
 	</body>
 </html>
