--- a/src/index.html
+++ b/src/index.html
@@ -18,5 +18,6 @@
 		<main>
 			<h1 class="text-5xl font-thin">Hello world!</h1>
 		</main>
+		<!-- <script type="module" src="/main.js"></script> -->
 	</body>
 </html>
